<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PortfolioLauncher</string>
    <string name="action_settings">Settings</string>

    <string name="text_header">My Most Awesome Apps</string>

    <string name="button_text_spotify">Spotify Streamer</string>
    <string name="button_text_scores">Scores App</string>
    <string name="button_text_library">Library App</string>
    <string name="button_text_bigger">Build it Bigger</string>
    <string name="button_text_reader">XYZ Reader</string>
    <string name="button_text_capstone">Capstone: My app</string>
</resources>
